force-app/main/default/objects/MPConstructionSLA__c/MPConstructionSLA__c.object-meta.xml
<CustomObject>
    <label>Construction SLA</label>
    <nameField>
        <displayFormat>CSLA-{000000}</displayFormat>
        <label>Construction SLA Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>