force-app/main/default/objects/MPConstructionSLA__c/fields/MPConstructionSLA__c.field-meta.xml
<CustomField>
    <fullName>MPConstructionSLA__c</fullName>
    <label>Construction SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>