force-app/main/default/objects/MPConstructionSLA__c/fields/MPConstructionType__c.field-meta.xml
<CustomField>
    <fullName>MPConstructionType__c</fullName>
    <label>Tipo de construcción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>