force-app/main/default/objects/MPConstructionSLA__c/fields/MPContractType__c.field-meta.xml
<CustomField>
    <fullName>MPContractType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Type</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Construction SLAs</relationshipLabel>
    <relationshipName>Construction_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>