force-app/main/default/objects/MPConstructionSLA__c/fields/MPMaxGLA__c.field-meta.xml
<CustomField>
    <fullName>MPMaxGLA__c</fullName>
    <label>Metraje Maximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>