force-app/main/default/objects/MPConstructionSLA__c/fields/MPMinGLA__c.field-meta.xml
<CustomField>
    <fullName>MPMinGLA__c</fullName>
    <label>Metraje Minimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>